<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".FAAComplain">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#8A090000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:text="Finance And Administration Department"
        android:textColor="#BCA517"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="576dp"
        android:background="#8A090000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText20"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/subject_faa"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="30"
        android:textColor="#ffff"
        android:textColorHint="#AFB42B"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar6"
        app:layout_constraintEnd_toEndOf="@+id/toolbar6" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="402dp"
        android:layout_height="347dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="212dp"
        android:background="#8A090000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText27"
        android:layout_width="354dp"
        android:layout_height="303dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/description_faa"
        android:textColorHint="#BCA517"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar7"
        app:layout_constraintEnd_toEndOf="@+id/toolbar7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="156dp"
        android:text="@string/send_faa"
        android:textColor="#BCA517"
        app:backgroundTint="#8A090000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="80dp"
        android:text="@string/confirm_faa"
        android:textColor="#BCA517"
        app:backgroundTint="#8A090000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>